# LawPDF

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  PHASE3_MARKDOWN_QA.md  README.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_RUST_LICENSES.csv  build.rs  release-manifest.json
.github/workflows/: android.yml  release.yml
agentic-review-corpus/: .gitattributes  README.md  analysis-metadata.json  checksums.sha256  manifest.json
agentic-review-corpus/classifications/: 011-co-governance.csv  037-cost-of-justice-ai.csv  042-beyond-intent.csv  047-antisemitism-title-vi.csv  057-contract-wrapped-property.csv
agentic-review-corpus/markdown/: 011-co-governance.md  037-cost-of-justice-ai.md  042-beyond-intent.md  047-antisemitism-title-vi.md  057-contract-wrapped-property.md
android/: PERFORMANCE.md  README.md  UX_RESEARCH.md  build.gradle  build.ps1  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
docs/checkpoints/: checkpoint-20260605-0715-runtime-heading-diagnostics.md  checkpoint-20260605-0735-focused-chandra-body-heading-run.md  checkpoint-20260605-0750-vllm-generation-and-diagnostics.md  checkpoint-20260605-0812-hourly-preassessment.md  checkpoint-20260605-0918-grok-header-footer-specialist.md  checkpoint-20260605-0925-heading-fragment-guards.md  checkpoint-20260605-0930-process-dashboard-and-active-runs.md  checkpoint-20260605-1012-nongrok-heading-feature-and-queue.md  checkpoint-20260605-1152-dashboard-heading-training-status.md  checkpoint-20260605-1234-hardneg-v2-heading-run.md  checkpoint-20260605-1916-heading-specialist-cycle053.md  checkpoint-20260605-2108-heading-cycle056-progress.md
docs/notes/: CHANDRA_VLLM_WSL_HANDOFF.md  CLAUDE_IDEAS_PROMPT.md  DOCLAYNET_INGESTION.md  FEATURES_NETWORK_DESIGN_AND_PERFORMANCE.md  LIQUID_LAW_REVIEW_STATUS_REPORT.md  OCR_EVALUATION.md  ideas.md  lm2-toggle-audit.md  network_design.md  plan.md.txt
packaging/windows/: LawPDF.iss
profile-models/layout-body-chandra-structure-disputes-20260604-interim-104950-cycle064-candidate/: layout-role-model.json
profile-models/layout-body-v5-unseen-highconf-calibrated-20260602-candidate/: layout-role-model.json
profile-models/layout-footnote-v68-chandra-filtered3-w035-20260603-candidate/: layout-role-model.json
profile-models/layout-header-footer-v1-grok-lawreview-bias-neg20/: layout-role-model.json
profile-models/layout-heading-chandra-feature-hardneg-backfill-allaccum-20260605-night-0001-000039-cycle263-seed-candidate/: layout-role-model.json
profile-models/layout-heading-cycle058-faststack-expanded-goldnoise-20260605-candidate/: layout-role-model.json
profile-models/layout-role-liquid-core-v34-block-geometry-20260601-candidate/: layout-role-model.json
profile-models/layout-role-v45-pp-grok-scaleup-0507-candidate/: layout-role-model.json
scripts/: fetch-catboost-windows.ps1  generate-icon.ps1  package-macos.sh  package-windows.ps1
src/: app.rs  benchmark.rs  chat.rs  hashing.rs  layout_roles.rs  liquid.rs  liquid2.rs  liquid_smoke.rs  liquidvision.rs  macos_open_files.rs  main.rs  model.rs  ocr.rs  pdf_backend.rs  performance_cache.rs  profile_dataset.rs  render_worker.rs  settings.rs  single_instance.rs  text_conversion.rs  tts.rs  updater.rs
tools/: build_agentic_review_corpus.py  verify_release_manifest.py
(+53 files in other folders)
