[package]
name = "lawpdf"
version = "0.2.8"
edition = "2024"
description = "Native PDF reader and annotation editor for legal workflows"
license = "MIT"

[features]
default = []
devtools = []
bench-image-conversion = ["devtools"]

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
tract-onnx = "0.21"
eframe = { version = "0.33", default-features = true }
egui = "0.33"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
libloading = "0.8"
lopdf = "0.38"
pdfium-render = { version = "0.8", features = ["image", "sync"] }
quick-xml = "0.40.1"
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "local-offset"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSArray", "NSAppleEventDescriptor", "NSAppleEventManager", "NSObject", "NSString", "NSURL", "objc2-core-services", "std"] }

[build-dependencies]
winresource = { version = "0.1.31", default-features = false }
